--- a/AtividadeCurriculoHTML/index.html
+++ b/AtividadeCurriculoHTML/index.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Curriculo</title>
 </head>
 <body>
-    <h1>Leontiev Ramalho</h1>
+    <h1><b>Leontiev Ramalho</b></h1>
     <p>
         <a href="https://github.com/leontievramalho">Github</a><br>
         <a href="https://www.linkedin.com/in/leontiev-ramalho-0a408a1a3/">Linkedin</a>
     </p>
     <p>
-        Habilidades:
+        <b>Habilidades:</b>
         <ul>
             <li>
                 Java
@@ -32,7 +33,7 @@
         </ul>
     </p>
     <p>
-        Experiência:
+        <b>Experiência:</b>
         <ul>
             <li>
                 5 anos de experiência como professor de Matemática do ensino médio na escola cidadã integral ECI Elaine Soares Brasileiro.
@@ -40,7 +41,7 @@
         </ul>
     </p>
     <p>
-        Certificações:
+        <b>Certificações:</b>
         <ul>
             <li>
                 Graduação em Licenciatura em Matemática
